--- a/pagina_web/login.html
+++ b/pagina_web/login.html
@@ -60,7 +60,7 @@
             const usuario = document.getElementById('usuario').value;
             const contraseña = document.getElementById('contraseña').value;
 
-            fetch('https://app-4e38ec5f-fde9-4728-897e-8d76c370a1ca.cleverapps.io/api/login', {
+            fetch('https://sensormq.onrender.com/api/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
